# SOVITS_windows_ONNX_Infer

./: CMakeLists.txt  README.md  SOVITS_windows_ONNX_Infer.cpp  SOVITS_windows_ONNX_Infer.h  audio_utils.cpp  audio_utils.h  config.json  dx_utils.cpp  dx_utils.h  f0_utils.cpp  f0_utils.h  utils.cpp  utils.h
